--- a/public/style.css
+++ b/public/style.css
@@ -19,3 +19,45 @@ form div {
   margin: 1em;
   display: inline-block;
 }
+
+.cart-item {
+  border-bottom: 1px solid #666;
+  padding: 1rem;
+  width: 100%;
+  position: relative;
+}
+.cart-item .price {
+  position: absolute;
+  top: 2rem;
+  bottom: 1rem;
+  right: 1rem;
+  width: 30%;
+  font-size: 0.8rem;
+  color: #aaa;
+  transform: rotate(30deg);
+}
+.cart-item .title {
+  font-size: 1rem;
+  color: #999;
+  line-height: 1.5rem;
+  height: 1.5rem;
+  width: 70%;
+}
+.cart-item .controls {
+  height: 1.5rem;
+  cursor: pointer;
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+  background-color: #eee;
+}
+.cart-item span:nth-child(1),
+.cart-item span:nth-child(3) {
+  border: 1px solid cornflowerblue;
+  color: cornflowerblue;
+  background: #fff;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  padding: 0 0.5rem;
+  display: block;
+}
